@@ -18,16 +18,17 @@
  */
 $lan = array(
     'plugin_title' => 'Bounce Statistics Plugin',
-    'domain' => 'Domain',
-    'reason' => 'Reason',
-    'users' => 'Users',
+    'bounce domains' => 'Bounce domains',
+    'bounce reasons' => 'Bounce reasons',
+    'bounced users' => 'Bounced users',
     'bounce' => 'Bounce ID',
     'bounce date' => 'Bounce Date',
+    'reason' => 'reason',
     'User email' => 'User email',
     'message id' => 'Msg ID',
     'domain name' => 'Domain name',
     'bounces' => 'Total bounces',
-	'bounce count' => 'Bounce count',
+    'bounce count' => 'Bounce count',
     'confirmed_heading' => 'Conf',
     'not confirmed' => 'not confirmed',
     'blacklisted_heading' => 'Bl',
